objects/ssot__AcademicYear__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source</masterLabel>
            <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source Object</masterLabel>
            <refAttrDeveloperName>DataSourceObjectId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Description</masterLabel>
            <refAttrDeveloperName>Description</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Academic Year Id</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Academic Year Id</masterLabel>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Internal Organization</masterLabel>
            <refAttrDeveloperName>InternalOrganizationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Name</masterLabel>
            <refAttrDeveloperName>Name</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__YearText__c</fullName>
        <label>Year</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Year</masterLabel>
            <refAttrDeveloperName>YearText</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Academic Year</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Learning</referenceEntityGroup>
        <referenceEntityName>AcademicYear</referenceEntityName>
        <referenceEntitySubjectArea>Student Enrollment</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>